--- a/html/communityprofile.html
+++ b/html/communityprofile.html
@@ -12,67 +12,60 @@
 </head>
 
 <body>
-    <!--Import jQuery before materialize.js-->
+<!--Import jQuery before materialize.js-->
 
-    <nav>
-      <ul class="right hide-on-med-and-down">
+<nav>
+    <ul class="right hide-on-med-and-down">
         <li><a href="#!"></a></li>
     </ul>
     <ul id="slide-out" class="side-nav">
-        <li><a href="#!">First Sidebar Link</a></li>
-        <li><a href="#!">Second Sidebar Link</a></li>
+        <li><a href="#!"></a></li>
     </ul>
     <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
 </nav>
 <div class="">
     <div class="section no-pad-bot" id="index-banner">
-        <div class="row red">
-            <div class="col s12">
-                <h4 class="white-text">COMMUNITY</h4>
-            </div>
-        </div>
         <div class="row">
-              <form id="searchForm">
+            <form id="searchForm">
                 <div class="input-field col s6">
                     <input placeholder="contains" id="first_name" type="text" class="validate">
                     <label for="first_name">SEARCH</label>
                 </div>
-              </form>
-          </div>
-          <div class="col m12">
+            </form>
+        </div>
+        <div class="col m12">
             <table>
-              <thead>
-                  <tr>
-                      <th data-field="lastname">LAST NAME</th>
-                      <th data-field="firstname">FIRST Name</th>
-                      <th data-field="middlename">MIDDLE NAME</th>
-                      <th data-field="nickname">NICKNAME</th>
-                      <th data-field="birthdate">BIRTHDATE</th>
-                  </tr>
-              </thead>
+                <thead>
+                <tr>
+                    <th data-field="lastname">LAST NAME</th>
+                    <th data-field="firstname">FIRST Name</th>
+                    <th data-field="middlename">MIDDLE NAME</th>
+                    <th data-field="nickname">NICKNAME</th>
+                    <th data-field="birthdate">BIRTHDATE</th>
+                </tr>
+                </thead>
 
-              <tbody>
-                  <tr>
+                <tbody>
+                <tr>
                     <td colspan="5" id="noentries" class="center"><h3>No Entries</h3></td>
                 </tr>
-            </tbody>
-        </table>
+                </tbody>
+            </table>
+        </div>
     </div>
-</div>
-</div>
 </div>
 
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
 <script type="text/javascript" src="../js/materialize.min.js"></script>
 <script type="text/javascript">
-    $(document).ready(function(){
-       $('.button-collapse').sideNav({
-              menuWidth: 300, // Default is 240
-              edge: 'left', // Choose the horizontal origin
-              closeOnClick: true // Closes side-nav on <a> clicks, useful for Angular/Meteor
-          }
-          );
-   });
+    $(document).ready(function () {
+        $('.button-collapse').sideNav({
+                    menuWidth: 300, // Default is 240
+                    edge: 'left', // Choose the horizontal origin
+                    closeOnClick: true // Closes side-nav on <a> clicks, useful for Angular/Meteor
+                }
+        );
+    });
 </script>
 </body>
 </html>
