--- a/html/home.html
+++ b/html/home.html
@@ -1,20 +1,74 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--Import materialize.css-->
-  <link href="../css/reset.css">
-  <link href="../css/grid.css"  media="screen,projection"/>
-  <link href="../css/materialize.min.css"  media="screen,projection"/>
-
-  <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+    <!--Import materialize.css-->
+    <link href="../css/reset.css"/>
+    <link href="../css/grid.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
 
 <body>
+<nav>
+    <ul class="right hide-on-med-and-down">
+        <li><a href="#!"></a></li>
+    </ul>
+    <ul id="slide-out" class="side-nav">
+        <li><a href="#!"></a></li>
+    </ul>
+    <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+</nav>
+<div class="container">
+    <div class="section no-pad-bot" id="index-banner">
+        <div class="row">
+            <div class="col s3">
+                <a href="#">
+                    <div class="card-panel teal center-align">
+                        <i class="mdi-social-people white-text large"></i>
+                      <span class="white-text medium">
+                         <h5>Community</h5>
+                      </span>
+                    </div>
+                </a>
+            </div>
+            <div class="col s3">
+                <a href="#">
+                    <div class="card-panel teal center-align">
+                        <i class="mdi-social-people white-text large"></i>
+                      <span class="white-text medium">
+                         <h5>Community</h5>
+                      </span>
+                    </div>
+                </a>
+            </div>
+            <div class="col s3">
+                <a href="#">
+                    <div class="card-panel teal center-align">
+                        <i class="mdi-social-people white-text large"></i>
+                      <span class="white-text medium">
+                         <h5>Community</h5>
+                      </span>
+                    </div>
+                </a>
+            </div>
+            <div class="col s3">
+                <a href="#">
+                    <div class="card-panel teal center-align">
+                        <i class="mdi-social-people white-text large"></i>
+                          <span class="white-text medium">
+                             <h5>Community</h5>
+                          </span>
+                    </div>
+                </a>
+            </div>
 
-    
+        </div>
+    </div>
+</div>
+
 <!--Import jQuery before materialize.js-->
 <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script type="text/javascript" src="js/materialize.min.js"></script>
+<script type="text/javascript" src="../js/materialize.min.js"></script>
 </body>
 </html>
