--- a/html/template.html
+++ b/html/template.html
@@ -1,18 +1,63 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <!--Import materialize.css-->
-  <link href="../css/reset.css">
-  <link href="../css/grid.css"  media="screen,projection"/>
-  <link href="../css/materialize.min.css"  media="screen,projection"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
+    <!--Import materialize.css-->
+    <link href="../css/reset.css"/>
+    <link href="../css/materialize.min.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <!--Let browser know website is optimized for mobile-->
 
-  <!--Let browser know website is optimized for mobile-->
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 </head>
 
-<body>
-<!--Import jQuery before materialize.js-->
-<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
-<script type="text/javascript" src="js/materialize.min.js"></script>
+<body class="body">
+    <!--Import jQuery before materialize.js-->
+    <nav>
+        <ul id="tools-dropdown" class="tools-items dropdown-content">
+
+        </ul>
+        <ul class="right hide-on-med-and-down">
+            <li><a href="#!">HOME</a></li>
+            <li><a class="dropdown-button" href="#!" data-activates="tools-dropdown">TOOLS</a></li>
+            <li><a href="#!">ABOUT</a></li>
+            <li><a href="#!">LOG OUT</a></li>
+        </ul>
+        <ul id="slide-out" class="side-nav">
+            <li><a href="#!">HOME</a></li>
+            <li class="no-padding">
+                <ul class="collapsible collapsible-accordion">
+                    <li>
+                        <a class="collapsible-header">TOOLS</a>
+                        <div class="collapsible-body">
+                            <ul class="tools-items">
+
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
+            </li>
+            <li><a href="#!">ABOUT</a></li>
+            <li><a href="#!">LOG OUT</a></li>
+        </ul>
+        <a href="#" data-activates="slide-out" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+    </nav>
+
+    <main id="content">
+        
+    </main>
+
+    <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script type="text/javascript" src="../js/materialize.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function () {
+        $('.button-collapse').sideNav({
+                    menuWidth: 400, // Default is 240
+                    edge: 'left', // Choose the horizontal origin
+                    closeOnClick: true // Closes side-nav on <a> clicks, useful for Angular/Meteor
+                }
+                );
+    });
+</script>
+<script src="../js/communityprofile.min.js" type="text/javascript" charset="utf-8" async defer></script>
 </body>
 </html>
