Renamed 'TOOLS' as 'OPTIONS'

--- a/html/communityprofile.html
+++ b/html/communityprofile.html
@@ -18,7 +18,7 @@
         </ul>
         <ul class="right hide-on-med-and-down">
             <li><a href="#!">HOME</a></li>
-            <li><a class="dropdown-button" href="#!" data-activates="tools-dropdown">TOOLS</a></li>
+            <li><a class="dropdown-button" href="#!" data-activates="tools-dropdown">OPTIONS</a></li>
             <li><a href="#!">ABOUT</a></li>
             <li><a href="#!">LOG OUT</a></li>
         </ul>
@@ -27,7 +27,7 @@
             <li class="no-padding">
                 <ul class="collapsible collapsible-accordion">
                     <li>
-                        <a class="collapsible-header">TOOLS</a>
+                        <a class="collapsible-header">OPTIONS</a>
                         <div class="collapsible-body">
                             <ul class="tools-items">
 
